--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -4,3 +4,30 @@
     background-position: 50%;
     padding: 5rem 0;
 }
+
+.barra {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width:768px) {
+    .barra {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+.navegacion {
+    margin-top: 5rem;
+    display: flex;
+    gap: 2rem;
+}
+
+.navegacion a {
+    color: var(--blanco);
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-transform: uppercase;
+}
