--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -24,10 +24,23 @@
     gap: 2rem;
 }
 
+@media (min-width:768px) {
+    .navegacion {
+        margin-top: 0;
+    }
+}
+
 .navegacion a {
     color: var(--blanco);
     text-decoration: none;
     font-size: 1.4rem;
     font-weight: 700;
     text-transform: uppercase;
+    padding: .5rem;
+    transition-property: background-color;
+    transition-duration: .3s;
+}
+
+.navegacion a:hover {
+    background-color: var(--primary);
 }
